Fix alignment

--- a/index.css
+++ b/index.css
@@ -41,7 +41,7 @@ body {
 
 .list {
 	text-align: center;
-	margin: 10px 0px 20px 50px;
+	margin: 10px 0px;
 }
 
 .list h3 {
